--- a/lagou/index.html
+++ b/lagou/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>lagou</title>
+  	<meta name="referrer" content="no-referrer"/>
+  <title>lagou</title>
   </head>
   <body>
     <div id="app"></div>
